# turftopic

./: 404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  citation.cff  index.html  mkdocs.yml  objects.inv  paper.bib  paper.md  pyproject.toml
.github/: CONTRIBUTING
.github/workflows/: documentation.yml  static.yml  tests.yml
FASTopic/: index.html
GMM/: index.html
KeyNMF/: index.html
SensTopic/: index.html
Topeax/: index.html
analyzers/: index.html
basics/: index.html
benchmark/: index.html
c_top2vec/: index.html
chinese/: index.html
clustering/: index.html
concept_induction/: index.html
cross_lingual/: index.html
ctm/: index.html
custom_model/: index.html
cvp/: index.html
docs/: FASTopic.md  GMM.md  KeyNMF.md  SensTopic.md  Topeax.md  analyzers.md  basics.md  benchmark.md  c_top2vec.md  chinese.md  clustering.md  concept_induction.md  cross_lingual.md  ctm.md  custom_model.md  cvp.md  dynamic.md  encoders.md  finetuning.md  hierarchical.md  index.md  keyphrase.md  late_interaction.md  model_definition_and_training.md  model_interpretation.md  model_overview.md  multimodal.md  namers.md  online.md  persistence.md  s3.md  seeded.md  topic_data.md  vectorizers.md
docs/images/: cluster_datamapplot.html  dynamic_s3.html
docs/stylesheets/: extra.css
docs/tutorials/: arxiv_ml.md  ideologies.md  overview.md  religious.md  reviews.md
docs/tutorials/images/: pol_comp_20.html
dynamic/: index.html
encoders/: index.html
examples/: basic_example_20newsgroups.ipynb
finetuning/: index.html
hierarchical/: index.html
images/: concept_induction.html  datamapplot_new.html  dynamic_keynmf.html  topeax_components_datamapplot.html  tree_plot.html
keyphrase/: index.html
late_interaction/: index.html
model_definition_and_training/: index.html
model_interpretation/: index.html
model_overview/: index.html
multimodal/: index.html
namers/: index.html
online/: index.html
papers/topeax/: citations.bib  main.html  main.typ
papers/topeax/figures/: .xdp-performance.svg.2025_11_06_21_47_55.0.svg-LKVaas
persistence/: index.html
s3/: index.html
search/: search_index.json
seeded/: index.html
site/: 404.html  index.html  objects.inv
site/GMM/: index.html
site/KeyNMF/: index.html
site/clustering/: index.html
site/ctm/: index.html
site/dynamic/: index.html
site/encoders/: index.html
site/model_overview/: index.html
site/persistence/: index.html
site/s3/: index.html
tests/: test_cvp.py  test_integration.py  test_multimodal.py
topic_data/: index.html
turftopic/: __init__.py  _concept_browser.py  _datamapplot.py  _figure.py  base.py  centroid_distance.py  chinese.py  container.py  data.py  dynamic.py  error.py  feature_importance.py  hierarchical.py  late.py  merging.py  multimodal.py  optimization.py  ragged.py  serialization.py  soft_ctf_idf.py  types.py  utils.py  vectorizer.py
turftopic/analyzers/: __init__.py  base.py  hf_llm.py  openai.py  t5.py  utc.py
turftopic/encoders/: __init__.py  base.py  cohere.py  contextual.py  e5.py  late_interaction.py  multimodal.py  openai.py  utils.py  voyage.py
turftopic/models/: _attentionmf.py  _concept_induction.py  _fastopic.py  _hierarchical_clusters.py  _keynmf.py  _snmf.py  cluster.py  concept_induction.py  ctm.py  cvp.py  decomp.py  fastopic.py  gmm.py  keynmf.py  senstopic.py  topeax.py  wnmf.py
turftopic/namers/: __init__.py  base.py  hf_transformers.py  ngram.py  openai.py
turftopic/retrieval/: __init__.py  bm25.py
turftopic/supervised/: semantic_lexical.py
turftopic/vectorizers/: __init__.py  merging.py  phrases.py  snowball.py  spacy.py
turftopic/vectorizers/latent_terms/: latent_terms.py  top_k_autoencoder.py
tutorials/arxiv_ml/: index.html
tutorials/ideologies/: index.html
tutorials/images/: arxiv_ml_datamapplot.html  graph_learning_tree.html  pol_comp_01.html  pol_comp_12.html  pol_comp_parties.html  religion_topic_group_heatmap.html  religion_word_map.html  stock_change_forest.html  topic_pie.html
tutorials/overview/: index.html
tutorials/religious/: index.html
tutorials/reviews/: index.html
vectorizers/: index.html
