[tool.black]
line-length=79

[tool.ruff]
line-length=79

[tool.poetry]
name = "turftopic"
version = "0.11.0"
description = "Topic modeling with contextual representations from sentence transformers."
authors = ["Márton Kardos <power.up1163@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = ">=1.23.0"
scikit-learn = "^1.3.0"
sentence-transformers = ">=2.2.0"
torch = "^2.1.0"
scipy = "^1.10.0"
rich = "^13.6.0"
huggingface-hub = ">=0.23.2"
joblib = "^1.2.0"
snowballstemmer = {version=">=2.0.0", optional=true}
spacy = {version=">=3.6.0", optional=true}
jieba = {version=">=0.40.0", optional=true}
openTSNE = {version="^1.0.0", optional=true}
datamapplot = {version="^0.4.2", optional=true}
pyro-ppl = { version = "^1.8.0", optional = true }
openai = { version = "^1.40.0", optional = true }
mkdocs = { version = "^1.5.2", optional = true }
mkdocs-material = { version = "^9.5.12", optional = true }
mkdocstrings = { version = "^0.24.0", extras = ["python"], optional = true }

[tool.poetry.extras]
pyro-ppl = ["pyro-ppl"]
openai = ["openai"]
opentsne = ["openTSNE"]
datamapplot=["datamapplot"]
jieba = ["jieba"]
spacy = ["spacy"]
snowball = ["snowballstemmer"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
