[tool.black]
line-length=79

[tool.ruff]
line-length=79

[tool.isort]
profile = "black"

[project]
name = "turftopic"
version = "0.17.5"
description = "Topic modeling with contextual representations from sentence transformers."
authors = [
   { name = "Márton Kardos <power.up1163@gmail.com>", email = "martonkardos@cas.au.dk" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.23.0",
  "scikit-learn>=1.3.0,<2.0.0",
  "sentence-transformers>=2.2.0",
  "torch>=2.1.0,<3.0.0",
  "scipy>=1.10.0,<2.0.0",
  "rich>=13.6.0,<14.0.0",
  "huggingface-hub>=0.23.2,<1.0.0",
  "joblib>=1.2.0,<2.0.0",
  "igraph~=0.11.6",
  "pillow~=10.4.0",
]

[project.optional-dependencies]
pyro-ppl = ["pyro-ppl>=1.8.0,<2.0.0"]
openai = ["openai>=1.40.0,<2.0.0"]
opentsne = ["openTSNE>=1.0.0,<2.0.0"]
datamapplot=["datamapplot>=0.4.2, <1.0.0"]
jieba = ["jieba>=0.40.0,<1.0.0"]
spacy = ["spacy>=3.6.0,<4.0.0"]
snowball = ["snowballstemmer>=2.0.0,<3.0.0"]
topic-wizard = ["topic-wizard>1.0.0,<2.0.0"]
umap-learn = ["umap-learn>=0.5.5,<1.0.0"]
docs = [
  "griffe==0.40.0",
  "mkdocs==1.6.1",
  "mkdocs-autorefs==0.5.0",
  "mkdocs-material==9.6.19",
  "mkdocs-material-extensions==1.3.1",
  "mkdocstrings==0.22.0",
  "mkdocstrings-python==1.8.0",
]
dev = [
  "pyro-ppl>=1.8.0,<2.0.0",
  "openai>=1.40.0,<2.0.0",
  "openTSNE>=1.0.0,<2.0.0",
  "datamapplot>=0.4.2, <1.0.0",
  "jieba>=0.40.0,<1.0.0",
  "snowballstemmer>=2.0.0,<3.0.0",
  "topic-wizard>1.0.0,<2.0.0",
  "umap-learn>=0.5.5,<1.0.0",
  "mkdocs==1.5.3",
  "mkdocs-autorefs==0.5.0",
  "mkdocs-material==9.5.6",
  "mkdocs-material-extensions==1.3.1",
  "mkdocstrings==0.22.0",
  "mkdocstrings-python==1.8.0",
  "griffe==0.40.0",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
